// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

enum Role {
  ADMIN
  USER
}

model User {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  name     String
  email    String
  githubId String @unique

  role Role @default(USER)

  balance Int @default(0)

  apiCalls Int @default(0)

  stripeCustomerId String?

  rides    Ride[]
  payments Payment[]
}

model Payment {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  amount    Int     @default(0)
  automatic Boolean @default(false)
  paid      Boolean @default(false)

  checkoutId String? @unique

  invoiceId   String? @unique
  invoiceLink String? @unique

  user   User   @relation(fields: [userId], references: [id])
  userId String
}

model Applications {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  name  String
  token String

  apiCalls Int @default(0)
}

model Bike {
  id        String   @id
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  token String

  latitude  Decimal @db.Decimal(8, 6)
  longitude Decimal @db.Decimal(8, 6)

  battery  Int     @default(0)
  speed    Float   @default(0)
  disabled Boolean @default(false)

  rides Ride[]
}

model Ride {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  startTime DateTime
  endTime   DateTime?

  startLatitude  Decimal @db.Decimal(8, 6)
  startLongitude Decimal @db.Decimal(8, 6)

  endLatitude  Decimal? @db.Decimal(8, 6)
  endLongitude Decimal? @db.Decimal(8, 6)

  fromParkingZone Boolean
  toParkingZone   Boolean?

  chargedAmount Int?

  user   User   @relation(fields: [userId], references: [id])
  userId String
  bike   Bike   @relation(fields: [bikeId], references: [id])
  bikeId String
}

model ChargingStation {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  latitudeStart  Decimal @db.Decimal(8, 6)
  longitudeStart Decimal @db.Decimal(8, 6)

  latitudeEnd  Decimal @db.Decimal(8, 6)
  longitudeEnd Decimal @db.Decimal(8, 6)
}

model ParkingZone {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  latitudeStart  Decimal @db.Decimal(8, 6)
  longitudeStart Decimal @db.Decimal(8, 6)

  latitudeEnd  Decimal @db.Decimal(8, 6)
  longitudeEnd Decimal @db.Decimal(8, 6)
}

model DrivingZone {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  name String

  latitudeStart  Decimal @db.Decimal(8, 6)
  longitudeStart Decimal @db.Decimal(8, 6)

  latitudeEnd  Decimal @db.Decimal(8, 6)
  longitudeEnd Decimal @db.Decimal(8, 6)
}
