//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  email String [not null]
  githubId String [unique, not null]
  role Role [not null, default: 'USER']
  balance Int [not null, default: 0]
  apiCalls Int [not null, default: 0]
  stripeCustomerId String
  rides Ride [not null]
  payments Payment [not null]
}

Table Payment {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  amount Int [not null, default: 0]
  automatic Boolean [not null, default: false]
  paid Boolean [not null, default: false]
  checkoutId String [unique]
  invoiceId String [unique]
  invoiceLink String [unique]
  user User [not null]
  userId String [not null]
}

Table Applications {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  token String [not null]
  apiCalls Int [not null, default: 0]
}

Table Bike {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  token String [not null]
  latitude Decimal [not null]
  longitude Decimal [not null]
  battery Int [not null, default: 0]
  speed Float [not null, default: 0]
  disabled Boolean [not null, default: false]
  rides Ride [not null]
}

Table Ride {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  startTime DateTime [not null]
  endTime DateTime
  startLatitude Decimal [not null]
  startLongitude Decimal [not null]
  endLatitude Decimal
  endLongitude Decimal
  fromParkingZone Boolean [not null]
  toParkingZone Boolean
  chargedAmount Int
  user User [not null]
  userId String [not null]
  bike Bike [not null]
  bikeId String [not null]
}

Table ChargingStation {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  latitudeStart Decimal [not null]
  longitudeStart Decimal [not null]
  latitudeEnd Decimal [not null]
  longitudeEnd Decimal [not null]
}

Table ParkingZone {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  latitudeStart Decimal [not null]
  longitudeStart Decimal [not null]
  latitudeEnd Decimal [not null]
  longitudeEnd Decimal [not null]
}

Table DrivingZone {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  latitudeStart Decimal [not null]
  longitudeStart Decimal [not null]
  latitudeEnd Decimal [not null]
  longitudeEnd Decimal [not null]
}

Enum Role {
  ADMIN
  USER
}

Ref: Payment.userId > User.id

Ref: Ride.userId > User.id

Ref: Ride.bikeId > Bike.id